--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,10 +1,18 @@
 <ol class="post-list">
-  {{#each posts as |post|}}
   <li>
     {{> post-info post }}
   </li>
-  {{/each}}
 </ol>
 {{> comments post.comments}}
+
+<form class="comment-form">
+  <div>
+    <textarea name="comment-body"></textarea>
+  </div>
+
+  <div>
+    <button type="submit">add comment to the blog post</button>
+  </div>
+</form>
 
 <script src="/javascript/comment.js"></script>
